# sdcp

./: README.md  pyproject.toml
src/sdcp/: __init__.py  config.py  consts.py  device.py  discovery.py
src/sdcp/device/: __init__.py  connection.py  messages.py
tests/int/: conftest.py  mock_device.py  mock_service.py
tests/int/discovery/: test_v3.py
